# streamlit_recipe_bot

./: .gitignore  README.md  cache_manager.py  catalog_bench.py  chat_agent.py  config.py  constants.py  db_utils.py  ebook_utils.py  exceptions.py  gdrive_utils.py  help.md  image_parser.py  log_utils.py  mistral_utils.py  models.py  nlp_utils.py  process_images.py  prompt.md  pyproject.toml  query_top_k.py  requirements.txt  session_state.py  streamlit_app.py  ui_helpers.py
.streamlit/: secrets.toml
diskcache/: __init__.py
mistralai/: __init__.py
mistralai/models/: __init__.py  function.py  tool.py  toolchoice.py
prompts/: chatbot_system.md  parse_system.md  rerank_system.md
pydantic_settings/: __init__.py
rapidfuzz/: __init__.py
rapidfuzz/process/: __init__.py
scipy/optimize/: __init__.py
scripts/: check_supabase.py  init_supabase_project.py  prototype_supabase_env.py  setup_supabase.py
streamlit/: __init__.py
streamlit/components/: __init__.py
taste_model/model-best/: config.cfg  meta.json
taste_model/model-best/ner/: model
taste_model/model-last/: meta.json
taste_model/model-last/ner/: model  moves
tenacity/: __init__.py
tests/: test_cache_dir.py  test_chat_agent.py  test_chatbot_api_real.py  test_chatbot_page.py  test_image_parser.py  test_init_supabase_project.py  test_query_top_k.py  test_supabase.py
ui_pages/: advanced_search.py  chatbot.py  help.py  library.py  mistral_doc.py  simple_search.py
